<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/managementFragment">

    <fragment
        android:id="@+id/managementFragment"
        android:name="com.coffee.order.fragment.ManagementFragment"
        android:label="@string/tab_management"
        tools:layout="@layout/fragment_management" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.coffee.order.fragment.HistoryFragment"
        android:label="@string/tab_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/settingFragment"
        android:name="com.coffee.order.fragment.SettingFragment"
        android:label="@string/tab_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/orderFragment"
        android:name="com.coffee.order.fragment.OrderFragment"
        android:label="Order"
        tools:layout="@layout/fragment_order" />


</navigation>