<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:cardBackgroundColor="#5FFF8C"
    app:cardCornerRadius="24dp"
    app:layout_constraintDimensionRatio="1:1"
    tools:layout_height="200dp"
    tools:layout_width="200dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_02"
            android:textColor="#004D23"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:text="@string/free"
            android:textColor="@color/primary_text_color"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvNumber" />

        <TextView
            android:id="@+id/tvLabelCapacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:letterSpacing="0.2"
            android:text="@string/capacity"
            android:textColor="@color/primary_text_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tvCapacityValue"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvCapacityValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/_4_persons"
            android:textColor="#004D23"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivAddIcon"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ivAddIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/add_icon"
            android:src="@drawable/ic_add_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>